<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wire Auto Messenger</string>
    <string name="accessibility_service_description">This service automates message sending in Wire app. It helps you send messages to all your contacts automatically.</string>
    
    <!-- Main Activity -->
    <string name="message_hint">Enter your message here...</string>
    <string name="schedule_label">Schedule</string>
    <string name="send_now">Send Now</string>
    <string name="enable_accessibility">Enable Accessibility Service</string>
    <string name="accessibility_not_enabled">Accessibility service is not enabled. Please enable it in settings.</string>
    <string name="message_empty">Please enter a message</string>
    <string name="sending_messages">Sending messages...</string>
    <string name="messages_sent">Messages sent successfully!</string>
    <string name="error_occurred">An error occurred</string>
    <string name="schedule_every_3_days">Send every 3 days</string>
    <string name="schedule_enabled">Scheduled sending enabled</string>
    <string name="schedule_disabled">Scheduled sending disabled</string>
    <string name="next_send_time">Next send: %1$s</string>
    
    <!-- Permission Dialogs -->
    <string name="permission_dialog_title">Setup Required</string>
    <string name="permission_dialog_message">Wire Auto Messenger needs Accessibility Service permission to automate message sending in Wire. Please enable it to continue.</string>
    <string name="permission_dialog_positive">Enable Now</string>
    <string name="permission_dialog_negative">Later</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_message">Allow notifications to receive updates about message sending progress.</string>
    <string name="notification_permission_allow">Allow</string>
    <string name="notification_permission_skip">Skip</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version 1.0.0</string>
</resources>
